...
  <string name="add">Add</string>
  <string name="add_folder">Add folder</string>
  <string name="add_item">Add Item</string>
  <string name="an_error_has_occurred">An error has occurred.</string>
  <string name="back">Back</string>
  <string name="bitwarden">Bitwarden</string>
  <string name="cancel">Cancel</string>
  <string name="copy">Copy</string>
  <string name="copy_password">Copy password</string>
  <string name="copy_username">Copy username</string>
  <string name="credits">Credits</string>
  <string name="delete">Delete</string>
  <string name="deleting">Deleting...</string>
...
  <string name="log_out">Log out</string>
  <string name="logout_confirmation">Are you sure you want to log out?</string>
  <string name="remove_account">Remove account</string>
  <string name="remove_account_confirmation">Are you sure you want to remove this account?</string>
  <string name="account_already_added">Account already added</string>
  <string name="switch_to_already_added_account_confirmation">Would you like to switch to it now?</string>
  <string name="master_password">Master password</string>
  <string name="master_password_required">Master password (required)</string>
  <string name="new_master_password_required">New master password (required)</string>
  <string name="more">More</string>
  <string name="my_vault">My vault</string>
  <string name="authenticator">Authenticator</string>
  <string name="name">Name</string>
  <string name="item_name_required">Item name (required)</string>
  <string name="send_name_required">"Send name (required)"</string>
  <string name="no">No</string>
  <string name="notes">Notes</string>
  <string name="private_notes">Private notes</string>
  <string name="ok">Ok</string>
  <string name="password">Password</string>
  <string name="save">Save</string>
  <string name="move">Move</string>
  <string name="saving">Saving...</string>
  <string name="settings">Settings</string>
  <string name="show">Show</string>
  <string name="item_deleted">Item deleted</string>
  <string name="submit">Submit</string>
  <string name="sync">Sync</string>
  <string name="thank_you">Thank you</string>
  <string name="tools">Tools</string>
  <string name="uri">URI</string>
  <string name="website_uri">Website (URI)</string>
  <string name="use_fingerprint_to_unlock">Use fingerprint to unlock</string>
...
  <string name="policy_in_effect_uppercase">Contain one or more uppercase characters</string>
  <string name="policy_in_effect_lowercase">Contain one or more lowercase characters</string>
  <string name="policy_in_effect_numbers">Contain one or more numbers</string>
  <string name="policy_in_effect_special">Contain one or more of the following special characters: %1$s</string>
  <string name="master_password_policy_validation_title">Invalid password</string>
  <string name="master_password_policy_validation_message">Password does not meet organization requirements. Please check the policy information and try again.</string>
  <string name="loading">Loading</string>
  <string name="accept_policies">By activating this switch you agree to the following:</string>
  <string name="accept_policies_error">Terms of Service and Privacy Policy have not been acknowledged.</string>
  <string name="terms_of_service">Terms of Service</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="accessibility_draw_over_permission_alert">Bitwarden needs attention - Turn on \"Draw-Over\" in \"Autofill Services\" from Bitwarden Settings</string>
  <string name="passkey_management">Passkey management</string>
...
  <string name="about_send">About Send</string>
  <string name="hide_email">Hide my email address from recipients</string>
  <string name="send_options_policy_in_effect">One or more organization policies are affecting your Send options.</string>
  <string name="send_file_premium_required">Free accounts are restricted to sharing text only. A premium membership is required to use files with Send.</string>
  <string name="send_file_email_verification_required">You must verify your email to use files with Send. You can verify your email in the web vault.</string>
  <string name="password_prompt">Master password re-prompt</string>
  <string name="password_confirmation">Master password confirmation</string>
  <string name="password_confirmation_desc">This action is protected, to continue please re-enter your master password to verify your identity.</string>
  <string name="captcha_required">Captcha required</string>
  <string name="captcha_failed">Captcha failed. Please try again.</string>
  <string name="updated_master_password">Updated master password</string>
  <string name="update_master_password">Update master password</string>
  <string name="update_master_password_warning">Your master password was recently changed by an administrator in your organization. In order to access the vault, you must update your master password now. Proceeding will log you out of your current session, requiring you to log back in. Active sessions on other devices may continue to remain active for up to one hour.</string>
...
  <string name="account_locked">Locked</string>
  <string name="account_logged_out">Logged out</string>
  <string name="account_switched_automatically">Switched to next available account</string>
  <string name="account_locked_successfully">Account locked</string>
  <string name="account_logged_out_successfully">Account logged out successfully</string>
  <string name="account_removed_successfully">Account removed successfully</string>
  <string name="delete_account">Delete account</string>
  <string name="deleting_your_account_is_permanent">Deleting your account is permanent</string>
  <string name="delete_account_explanation">Your account and all vault data will be erased and unrecoverable. Are you sure you want to continue?</string>
  <string name="deleting_your_account">Deleting your account</string>
  <string name="your_account_has_been_permanently_deleted">Your account has been permanently deleted</string>
  <string name="invalid_verification_code">Invalid verification code</string>
  <string name="request_otp">Request one-time password</string>
...
  <string name="are_you_trying_to_log_in">Are you trying to log in?</string>
  <string name="log_in_attempt_by_x_on_y">Login attempt by %1$s on %2$s</string>
  <string name="device_type">Device type</string>
  <string name="ip_address">IP address</string>
  <string name="time">Time</string>
  <string name="near">Near</string>
  <string name="confirm_log_in">Confirm login</string>
  <string name="deny_log_in">Deny login</string>
  <string name="just_now">Just now</string>
  <string name="x_minutes_ago">%1$s minutes ago</string>
  <string name="log_in_accepted">Login confirmed</string>
  <string name="log_in_denied">Login denied</string>
  <string name="approve_login_requests">Approve login requests</string>
  <string name="use_this_device_to_approve_login_requests_made_from_other_devices">Use this device to approve login requests made from other devices</string>
...
